--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -1,12 +1,13 @@
 .foro_home_container {
   display: flex;
   justify-content: space-between;
-  height: calc(
-    100vh - $navbar-height - $navbar-height-maring-top -
-      $navbar-height-maring-button
-  );
-  background-color: #DAE0E6;
+  height: calc(100vh - $navbar-height - $navbar-height-maring-top - $navbar-height-maring-button);
+  background-color: #dae0e6;
   overflow: hidden;
+
+  body.dark & {
+    background-color: $standard-color-black;
+  }
 
   .foro_posts_container {
     padding: 20px;
@@ -17,8 +18,6 @@
     align-items: center;
     font-family: $standard-font-Outfit-sans-serif;
 
-    
-
     .foro_posts_creator {
       width: 100%;
       height: auto;
@@ -27,6 +26,10 @@
       flex-direction: column;
       padding: 10px 25px;
       border-radius: 5px;
+
+      body.dark & {
+        background-color: rgba(45, 44, 44, 0.8);
+      }
 
       .foro_post_inputsAndImage {
         display: flex;
@@ -42,7 +45,7 @@
             margin-right: 10px;
             border-radius: 100%;
           }
-  
+
           input {
             width: 90%;
             height: 40px;
@@ -76,12 +79,12 @@
               outline: none;
               //border: 0;
             }
-            
+
+            body.dark & {
+              background-color: rgba(45, 44, 44, 0.8);
+            }
           }
-  
-          
-  
-          
+
           .foro_post_textAREA {
             width: 100%;
             height: 50px;
@@ -93,16 +96,17 @@
             border-left: 1px solid rgb(146, 140, 140);
             border-right: 1px solid rgb(146, 140, 140);
             resize: none;
+
             &:focus {
               outline: none;
+            }
+
+            body.dark & {
+              background-color: rgba(45, 44, 44, 0.8);
             }
           }
         }
       }
-
-      
-
- 
 
       .foro_posts_buttonSide {
         margin-top: 10px;
@@ -123,7 +127,7 @@
             .foro_post_Label {
               img {
                 cursor: pointer;
-                transition: all .2s ease;
+                transition: all 0.2s ease;
                 &:hover {
                   transform: scale(1.1);
                 }
@@ -150,9 +154,9 @@
           background-color: $standard-color-blue;
           color: white;
           border: 1px solid white;
-          transition: all .2s ease;
+          transition: all 0.2s ease;
           &:disabled {
-            transition: all .2s ease;
+            transition: all 0.2s ease;
             cursor: not-allowed;
             background-color: white;
             border: 1px solid #e63946;
@@ -161,26 +165,25 @@
         }
       }
     }
-    
+
     overflow-x: hidden;
 
     &::-webkit-scrollbar {
       width: 5px;
       background-color: $standard-background;
-  }
+    }
 
-  &::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-thumb {
       background-color: $standard-color-blue;
       border-radius: 5px;
-  }
+    }
 
-  &::-webkit-scrollbar-button {
+    &::-webkit-scrollbar-button {
       //background-color: red;
       width: 2px;
       height: 100%;
+    }
   }
-  }
-
 }
 
 .foro_home_loaderGif {
@@ -188,7 +191,7 @@
   margin-top: 50px;
 }
 
-.foro_post_tags{
+.foro_post_tags {
   display: flex;
   font-size: 10px;
   width: 100%;
@@ -211,8 +214,11 @@
     left: 0;
     padding: 10px;
     margin: 10px;
+
+    body.dark & {
+      color: white;
+    }
   }
-  
 
   .foro_post_tag_normal {
     background-color: #8fa3ce;
@@ -225,7 +231,7 @@
     cursor: pointer;
     margin: 0px 5px;
     position: relative;
-    transition: all .2s ease-in;
+    transition: all 0.2s ease-in;
 
     &:hover {
       transform: scale(1.1);
@@ -251,7 +257,7 @@
     }
   }
 
-  .foro_post_tag_selected{
+  .foro_post_tag_selected {
     background-color: $standard-color-blue;
     background-color: #8fa3ce;
     display: flex;
@@ -262,7 +268,7 @@
     cursor: pointer;
     margin: 0px 5px;
     position: relative;
-    transition: all .2s ease-in;
+    transition: all 0.2s ease-in;
 
     &:hover {
       transform: scale(1.1);
@@ -282,10 +288,9 @@
       text-align: center;
       font-size: 15px;
     }
-    
+
     .previewOff {
       display: none;
     }
   }
 }
-
