--- a/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
+++ b/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
@@ -1,123 +1,123 @@
-
 .foro_panelContainer {
-    background-color: $standard-color-blue;
-    font-family: $standard-font-Outfit-sans-serif;
-    flex-direction: column;
-    width: 300px;
+  background-color: $standard-color-blue;
+  font-family: $standard-font-Outfit-sans-serif;
+  flex-direction: column;
+  width: 300px;
+  display: flex;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 10px 25px;
+  justify-content: space-between;
+  height: 400px;
+  margin-right: 40px;
+
+  .foro_panel_SearchContainer {
     display: flex;
-    margin-top: 20px;
-    border-radius: 10px;
-    padding: 10px 25px;
-    justify-content: space-between;
-    height: 400px;
-    margin-right: 40px;
-    
 
-    .foro_panel_SearchContainer {
-        display: flex;
-        
-        input {
-            width: 100%;
-            height: 40px;
-            border: none;
-            border-top-left-radius: 15px;
-            border-bottom-left-radius: 15px;
-            padding-left: 10px;
-            
-            &:focus {
-                border: none;
-                outline: none;
-            }
-        }
+    input {
+      width: 100%;
+      height: 40px;
+      border: none;
+      border-top-left-radius: 15px;
+      border-bottom-left-radius: 15px;
+      padding-left: 10px;
 
-        button {
-            background-color: white;
-            border: none;
-            border-top-right-radius: 15px;
-            border-bottom-right-radius: 15px;
-            width: 60px;
-            cursor: pointer;
+      &:focus {
+        border: none;
+        outline: none;
+      }
 
-            .foro_panel_findIcon {
-                width: 30px;
-                
-            }
-        }
-    }
-
-    .foro_panel_refreshContainer {
-        display: flex;
-        justify-content: center;
-        margin-top: 10px;
-        align-items: center;
+      body.dark & {
+        background-color: rgba(45, 44, 44, 0.8);
         color: white;
-        cursor: pointer;
-
-        img{
-            width: 30px;
-            
-        }
+      }
     }
 
-    .foro_panel_MenuContainer {
-        color: white;
-        display: flex;
-        flex-direction: column;
-        margin-top: 10px;
-        justify-content: space-around;
+    button {
+      background-color: white;
+      border: none;
+      border-top-right-radius: 15px;
+      border-bottom-right-radius: 15px;
+      width: 60px;
+      cursor: pointer;
 
-        .foro_panel_Menu_HomeContainer {
-            cursor: pointer;
-            display: flex;
-            //flex-direction: column;
-            //justify-content: center;
-            align-items: center;
-            border-radius: 5px;
-            
-            transition: all .1s ease-in;
-            overflow: hidden;
-            
-            img {
-                width: 20px;
-                margin: 5px;
-                margin-right: 20px;
-            }
+      .foro_panel_findIcon {
+        width: 30px;
+      }
 
-            &:hover {
-                background-color:rgb(17, 22, 54);
-            }
+      body.dark & {
+        background-color: rgba(45, 44, 44, 0.734);
+      }
+    }
+  }
 
-           
+  .foro_panel_refreshContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    align-items: center;
+    color: white;
+    cursor: pointer;
 
-        }
+    img {
+      width: 30px;
+    }
+  }
 
-        .foro_panel_Menu_SELECTED {
-            cursor: pointer;
-            display: flex;
-            //flex-direction: column;
-            //justify-content: center;
-            align-items: center;
-            color: $standard-color-blue-green;
-            border-radius: 5px;
-            background-color:rgb(17, 22, 54);
-            transition: all .1s ease-in;
-            overflow: hidden;
-            
-            img {
-                width: 20px;
-                margin: 5px;
-                margin-right: 20px;
-            }
+  .foro_panel_MenuContainer {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    justify-content: space-around;
 
-        }
+    .foro_panel_Menu_HomeContainer {
+      cursor: pointer;
+      display: flex;
+      //flex-direction: column;
+      //justify-content: center;
+      align-items: center;
+      border-radius: 5px;
+
+      transition: all 0.1s ease-in;
+      overflow: hidden;
+
+      img {
+        width: 20px;
+        margin: 5px;
+        margin-right: 20px;
+      }
+
+      &:hover {
+        background-color: rgb(17, 22, 54);
+      }
     }
 
-    .foro_panel_logoContainer {
-        display: flex;
-        justify-content: center;
-        img {
-            width: 50px;
-            
-        }
+    .foro_panel_Menu_SELECTED {
+      cursor: pointer;
+      display: flex;
+      //flex-direction: column;
+      //justify-content: center;
+      align-items: center;
+      color: $standard-color-blue-green;
+      border-radius: 5px;
+      background-color: rgb(17, 22, 54);
+      transition: all 0.1s ease-in;
+      overflow: hidden;
+
+      img {
+        width: 20px;
+        margin: 5px;
+        margin-right: 20px;
+      }
     }
+  }
+
+  .foro_panel_logoContainer {
+    display: flex;
+    justify-content: center;
+    img {
+      width: 50px;
+    }
+  }
 }
