--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -25,7 +25,7 @@
 @import './components//Foro//foro_menu/foro_menu';
 @import './components/Foro/foro_profile/foro_profile';
 
-// Shop
+// Shop/
 @import './components/Shop/shop';
 @import './components/FilterPanel/filterPanel2';
 @import './components/ItemFilter/itemFilter';
