added transitions darkmode

--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -2,6 +2,8 @@ body {
   margin: 0;
   box-sizing: border-box;
 
+  transition: all 0.5s ease-out;
+
   &.dark {
     background-color: $standard-color-black;
     color: $standard-color-white;
