--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -5,6 +5,8 @@
   background-color: #dae0e6;
   overflow: hidden;
 
+  transition: all 0.5s ease-out;
+
   body.dark & {
     background-color: $standard-color-black;
   }
